# data-processing

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_fail.csv  test_transactions.csv
app/: __init__.py  config.py  constants.py  database.py  main.py  models.py  routes.py  schemas.py  services.py  utils.py
tests/: conftest.py  test_data.py
tests/integration/routes/: test_get_customer_summary.py  test_get_product_summary.py  test_get_transaction_by_id.py  test_get_transactions.py  test_upload_transactions.py
tests/integration/services/: test_csv_processor.py  test_row_processor.py
tests/unit/: test_csv_processor.py  test_row_processor.py
tests/unit/services/: test_get_customer_summary.py  test_get_product_summary.py  test_get_transaction_by_id.py  test_get_transactions.py  test_row_processor.py
tests/unit/utils/: test_currency.py  test_uuid_validation.py
